branches/wip/Archive/288d5a6b77c9615bd2f59c597eb6205f-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function ‘void print(char (&)[N])’:
main.cpp:15:32: error: ‘x’ was not declared in this scope
     std::cout << "string: " << x << std::endl;
                                ^
